--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -181,15 +181,6 @@ jobs:
       with:
         python-version: "3.10"
 
-    - name: Install termux-create-package
-      run: |
-        export install_path="/usr/local/bin"
-        sudo mkdir -p "$install_path"
-        sudo curl -L 'https://github.com/termux/termux-create-package/releases/latest/download/termux-create-package' -o "$install_path/termux-create-package"
-        sudo chmod 755 "$install_path/termux-create-package"
-
-        pip install ruamel.yaml
-
     - name: Prepare manifest
       id: manifest
       run: |
@@ -223,7 +214,9 @@ jobs:
 
     - name: Build package
       run: |
-        termux-create-package manifest.yml
+        pip install ruamel.yaml
+        chmod 755 ${{ github.workspace }}/.github/termux-create-package
+        ${{ github.workspace }}/.github/termux-create-package manifest.yml
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
