--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -171,6 +171,9 @@ jobs:
       build-date: ${{ steps.manifest.outputs.build-date }}
 
     steps:
+    - name: "⬇ Checkout"
+      uses: actions/checkout@v3
+
     - name: Download artifact
       uses: actions/download-artifact@v3
       with:
